# color-comparator

./: CHANGELOG.md  README.md  color-comparator.cabal  nearest-term256-color.cabal
app/: Main.hs
src/: Colors.hs  Comparators.hs  Main.hs  ResultBuilder.hs  Term256Colors.hs
