cabal-version:      2.4
name:               color-comparator
version:            0.1.0.0

synopsis: Hex color to nearest term256 color
description: 

color-comparator compares an input hex color to
a list of term 256 colors.

bug-reports: 
license: MIT
author: cliuj
homepage: https://github.com/cliuj/color-comparator
category: term256
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Colors
        Comparators
        ResultBuilder
    hs-source-dirs:
        src
    build-depends:
        base ^>=4.14.3.0,
        aeson ^>=1.5.6.0,
        bytestring ^>=0.10.12.0,
        containers ^>=0.6.5.1,
    default-language: Haskell2010

executable color-comparator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        aeson ^>=1.5.6.0,
        bytestring ^>=0.10.12.0,
        containers ^>=0.6.5.1,
    other-modules:
        Colors
        Comparators
        ResultBuilder
    hs-source-dirs:
        src
    default-language: Haskell2010
