cabal-version:      2.4
name:               nearest-term256-color
version:            0.1.0.0

synopsis: Hex color to nearest term256 color
description: 

nearest-term256-color calculates the distance between
the passed hex color input and returns the top 5 nearest
term256 color.

bug-reports: 
license: MIT
author: cliuj
homepage: https://github.com/cliuj/nearest-term256-color
category: term256
extra-source-files: CHANGELOG.md

executable nearest-term256-color
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      aeson ^>=1.5.6.0,
                      bytestring ^>=0.10.12.0,
    hs-source-dirs:   app
    default-language: Haskell2010
